Add Other Services

--- a/services/index.html
+++ b/services/index.html
@@ -811,7 +811,7 @@
           <div class="card h-100 shadow-sm">
             <div class="card-header bg-primary text-white text-center">
               <img
-                src="assets/img/keboon-writing.png"
+                src="../assets/img/keboon-writing.png"
                 alt="Keboon Logo"
                 class="img-fluid mb-2"
                 style="max-height:60px;"
