Add Sample Demo

--- a/services/index.html
+++ b/services/index.html
@@ -934,8 +934,8 @@
             >
               <div class="accordion-body">
                 You’ll automatically transition to month-to-month support at
-                your plan’s standard rate (Starter RM 99, Basic RM 149,
-                Standard RM 249, Premium RM 349).
+                your plan’s standard rate (Starter RM 99, Basic RM 149, Standard
+                RM 249, Premium RM 349).
               </div>
             </div>
           </div>
@@ -1106,7 +1106,117 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="page-section bg-light" data-aos="fade-up">
       <div class="container">
-        <h2 class="section-heading text-center mb-4">Portfolio</h2>
+        <h2 class="section-heading text-center mb-4">Sample Demo</h2>
+        <div class="row gy-4 justify-content-center">
+          <!-- Law Firm Template -->
+          <div
+            class="col-md-6 col-lg-4"
+            data-aos="zoom-in"
+            data-aos-delay="100"
+          >
+            <div class="card h-100 shadow-sm">
+              <div class="card-header bg-primary text-white text-center">
+                Law Firm
+              </div>
+              <div class="card-body p-2">
+                <iframe
+                  src="law-firm/index.html"
+                  title="Law Firm Template Preview"
+                  style="
+                    width: 100%;
+                    height: 250px;
+                    border: 1px solid #ddd;
+                    border-radius: 4px;
+                  "
+                ></iframe>
+              </div>
+              <div class="card-footer text-center">
+                <a
+                  href="law-firm/index.html"
+                  target="_blank"
+                  class="btn btn-outline-primary btn-sm"
+                >
+                  View Demo
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Restaurant Template -->
+          <div
+            class="col-md-6 col-lg-4"
+            data-aos="zoom-in"
+            data-aos-delay="200"
+          >
+            <div class="card h-100 shadow-sm">
+              <div class="card-header bg-success text-white text-center">
+                Restaurant
+              </div>
+              <div class="card-body p-2">
+                <iframe
+                  src="restaurant/index.html"
+                  title="Restaurant Template Preview"
+                  style="
+                    width: 100%;
+                    height: 250px;
+                    border: 1px solid #ddd;
+                    border-radius: 4px;
+                  "
+                ></iframe>
+              </div>
+              <div class="card-footer text-center">
+                <a
+                  href="restaurant/index.html"
+                  target="_blank"
+                  class="btn btn-outline-success btn-sm"
+                >
+                  View Demo
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Designer Portfolio Template -->
+          <div
+            class="col-md-6 col-lg-4"
+            data-aos="zoom-in"
+            data-aos-delay="300"
+          >
+            <div class="card h-100 shadow-sm">
+              <div class="card-header bg-dark text-white text-center">
+                Designer Portfolio
+              </div>
+              <div class="card-body p-2">
+                <iframe
+                  src="designer-portfolio/index.html"
+                  title="Designer Portfolio Preview"
+                  style="
+                    width: 100%;
+                    height: 250px;
+                    border: 1px solid #ddd;
+                    border-radius: 4px;
+                  "
+                ></iframe>
+              </div>
+              <div class="card-footer text-center">
+                <a
+                  href="designer-portfolio/index.html"
+                  target="_blank"
+                  class="btn btn-outline-dark btn-sm"
+                >
+                  View Demo
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="page-section bg-light" data-aos="fade-up">
+      <div class="container">
+        <h2 class="section-heading text-center mb-4">Live Portfolio</h2>
         <div class="row justify-content-center">
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="200">
             <div class="card h-100 shadow-sm">
