--- a/services/index.html
+++ b/services/index.html
@@ -790,7 +790,7 @@
       <div class="container">
         <div class="row gy-5 justify-content-center">
           <div class="col-md-6 col-lg-5" data-aos="fade-right">
-            <h2 class="section-heading">We Help</h2>
+            <h2 class="section-heading text-center">We Help</h2>
             <ul class="list-unstyled">
               <li class="mb-3 d-flex align-items-center">
                 <div class="icon-wrapper me-3">
@@ -825,7 +825,7 @@
             </ul>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="fade-left">
-            <h2 class="section-heading">Why Work With Us</h2>
+            <h2 class="section-heading text-center">Why Work With Us</h2>
             <ul class="list-unstyled">
               <li class="mb-3 d-flex align-items-center">
                 <div class="icon-wrapper me-3">
