--- a/index.html
+++ b/index.html
@@ -911,15 +911,36 @@
                 </div>
                 <!-- Duplicates for seamless loop -->
                 <div class="ecosystem-card">
-                    <img src="assets/img/partner/Artem.png" alt="Artem Ventures">
-                    <h5>PACE by Artem Ventures</h5>
-                    <p>Selected for a curated program supporting early-stage founders with fundraising and scaling strategies.</p>
-                </div>
-                <div class="ecosystem-card">
-                    <img src="assets/img/partner/google.png" alt="Google for Startups">
-                    <h5>Google for Startups</h5>
-                    <p>Received Google Cloud credits to support infrastructure and scale efficiently during early growth.</p>
-                </div>
+                  <img src="assets/img/partner/google.png" alt="Google for Startups">
+                  <h5>Google for Startups</h5>
+                  <p>Received Google Cloud credits to support infrastructure and scale efficiently during early growth.</p>
+              </div>
+              <div class="ecosystem-card">
+                  <img src="assets/img/partner/github.png" alt="GitHub">
+                  <h5>GitHub Student Pack</h5>
+                  <p>Using GitHub's tools and cloud services to support prototyping and streamline developer workflow.</p>
+              </div>
+              <div class="ecosystem-card">
+                  <img src="assets/img/partner/keboon_technology_solution.png" alt="Keboon Tech">
+                  <h5>Keboon Technology Solution</h5>
+                  <p>The team behind Keboon's MVP — delivering full-stack development, UI/UX design, and deployment.</p>
+              </div>
+              <div class="ecosystem-card">
+                <img src="assets/img/partner/google.png" alt="Google for Startups">
+                <h5>Google for Startups</h5>
+                <p>Received Google Cloud credits to support infrastructure and scale efficiently during early growth.</p>
+            </div>
+            <div class="ecosystem-card">
+                <img src="assets/img/partner/github.png" alt="GitHub">
+                <h5>GitHub Student Pack</h5>
+                <p>Using GitHub's tools and cloud services to support prototyping and streamline developer workflow.</p>
+            </div>
+            <div class="ecosystem-card">
+                <img src="assets/img/partner/keboon_technology_solution.png" alt="Keboon Tech">
+                <h5>Keboon Technology Solution</h5>
+                <p>The team behind Keboon's MVP — delivering full-stack development, UI/UX design, and deployment.</p>
+            </div>
+                
             </div>
         </div>
         <div class="container">
