--- a/services/index.html
+++ b/services/index.html
@@ -1864,8 +1864,9 @@
         <h2 class="section-heading text-center mb-5">
           <i class="fas fa-globe me-3"></i>Live Portfolio
         </h2>
-        <div class="row justify-content-center">
-          <div class="col-md-8" data-aos="fade-up" data-aos-delay="200">
+        <div class="row gy-4 justify-content-center">
+          <!-- Keboon Marketplace -->
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="card h-100 shadow-sm">
               <div class="card-header bg-light text-center">
                 <img
@@ -1896,6 +1897,48 @@
                     <i class="fas fa-mobile-alt me-2"></i>Visit app.keboon.net
                   </a>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Teman Malaysia - Work in Progress -->
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="card h-100 shadow-sm">
+              <div class="card-header bg-warning text-dark text-center">
+                <img
+                  src="/keboon-website/assets/img/partner/teman-logo.png"
+                  alt="Teman Malaysia Logo"
+                  class="img-fluid mb-2"
+                  style="max-height: 60px"
+                />
+                <span class="badge bg-info ms-2">
+                  <i class="fas fa-hammer me-1"></i>In Progress
+                </span>
+              </div>
+              <div class="card-body text-center">
+                <p class="card-text mb-3">
+                  Care companionship platform matching customers with "Temanions" 
+                  for daily assistance, appointments, and activities.
+                </p>
+                <div class="mb-3">
+                  <small class="text-muted">
+                    <i class="fas fa-info-circle me-1"></i>
+                    Currently in active development - features being added weekly
+                  </small>
+                </div>
+                <a
+                  href="https://aimi-keboon.github.io/teman-malaysia/"
+                  target="_blank"
+                  class="btn btn-outline-warning"
+                >
+                  <i class="fas fa-eye me-2"></i>Preview Development
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
               </div>
             </div>
           </div>
