--- a/services/index.html
+++ b/services/index.html
@@ -1906,7 +1906,7 @@
             <div class="card h-100 shadow-sm">
               <div class="card-header bg-warning text-dark text-center">
                 <img
-                  src="/keboon-website/assets/img/partner/teman-logo.png"
+                  src="../assets/img/customer/teman-logo.png"
                   alt="Teman Malaysia Logo"
                   class="img-fluid mb-2"
                   style="max-height: 60px"
