--- a/staff-digital-profie/saravana-pillay.html
+++ b/staff-digital-profie/saravana-pillay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saravana Pillay Jeganathan - CEO & Founder | Keboon Technology Solution</title>
+    <title>Saravana Pillay Jeganathan - CEO & Founder | Keboon</title>
     <style>
         * {
             margin: 0;
