--- a/staff-digital-profie/saravana-pillay.html
+++ b/staff-digital-profie/saravana-pillay.html
@@ -487,7 +487,7 @@
             <h2>Introducing the Keboon App</h2>
             <img src="/keboon-website/assets/img/keboon-concept.png" alt="Keboon App Concept - Hand holding phone displaying the Keboon app" class="app-image">
             <p class="app-description">Experience the future of local food systems with our innovative mobile platform that connects communities, reduces waste, and promotes sustainable agriculture through cutting-edge AI technology.</p>
-            <a href="https://keboon.net" target="_blank" class="btn-secondary">
+            <a href="https://app.keboon.net" target="_blank" class="btn-secondary">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-right: 8px;">
                     <path d="M18 13V19C18 19.5523 17.5523 20 17 20H5C4.44772 20 4 19.5523 4 19V7C4 6.44772 4.44772 6 5 6H11M15 3H21V9M10 14L21 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
