--- a/staff-digital-profie/saravana-pillay.html
+++ b/staff-digital-profie/saravana-pillay.html
@@ -478,14 +478,14 @@
             </div>
             <h1 class="name">Saravana Pillay Jeganathan</h1>
             <div class="title">CEO & Co-Founder</div>
-            <img src="/keboon-website/assets/img/keboon-writing.png" alt="Keboon Technology Solution" class="company-logo">
+            <img src="img/ICN-LOGO-1_1.png" alt="Keboon Technology Solution" class="company-logo">
             <p class="intro">Leading the transformation of local food systems through innovative technology and sustainable community connections.</p>
         </div>
         
         <!-- App Showcase Section -->
         <div class="app-showcase">
             <h2>Introducing the Keboon App</h2>
-            <img src="/keboon-website/assets/img/keboon-concept.png" alt="Keboon App Concept - Hand holding phone displaying the Keboon app" class="app-image">
+            <img src="img/keboon-concept.png" alt="Keboon App Concept - Hand holding phone displaying the Keboon app" class="app-image">
             <p class="app-description">Experience the future of local food systems with our innovative mobile platform that connects communities, reduces waste, and promotes sustainable agriculture through cutting-edge AI technology.</p>
             <a href="https://app.keboon.net" target="_blank" class="btn-secondary">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-right: 8px;">
