--- a/services/index.html
+++ b/services/index.html
@@ -1864,85 +1864,115 @@
         <h2 class="section-heading text-center mb-5">
           <i class="fas fa-globe me-3"></i>Live Portfolio
         </h2>
-        <div class="row gy-4 justify-content-center">
-          <!-- Keboon Marketplace -->
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="card h-100 shadow-sm">
-              <div class="card-header bg-light text-center">
-                <img
-                  src="../assets/img/keboon-writing.png"
-                  alt="Keboon Logo"
-                  class="img-fluid mb-2"
-                  style="max-height: 60px"
-                />
-              </div>
-              <div class="card-body text-center">
-                <p class="card-text mb-3">
-                  Local Produce Marketplace connecting neighbours to share
-                  fresh, home-grown produce.
-                </p>
-                <div class="d-flex justify-content-center gap-2 flex-wrap">
-                  <a
-                    href="https://keboon.net"
-                    target="_blank"
-                    class="btn btn-outline-primary"
-                    >
-                    <i class="fas fa-external-link-alt me-2"></i>Visit keboon.net
-                  </a>
-                  <a
-                    href="https://app.keboon.net"
-                    target="_blank"
-                    class="btn btn-outline-secondary"
-                    >
-                    <i class="fas fa-mobile-alt me-2"></i>Visit app.keboon.net
-                  </a>
-                </div>
-              </div>
-            </div>
+        <!-- Live Portfolio Section -->
+    <div class="row gy-4 justify-content-center">
+      <!-- Keboon Marketplace -->
+      <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="card h-100 shadow-sm">
+          <div class="card-header bg-light text-center">
+            <img
+              src="../assets/img/keboon-writing.png"
+              alt="Keboon Logo"
+              class="img-fluid mb-2"
+              style="max-height: 60px"
+            />
           </div>
-
-          <!-- Teman Malaysia - Work in Progress -->
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="card h-100 shadow-sm">
-              <div class="card-header bg-warning text-dark text-center">
-                <img
-                  src="../assets/img/customer/teman-logo.png"
-                  alt="Teman Malaysia Logo"
-                  class="img-fluid mb-2"
-                  style="max-height: 60px"
-                />
-                <span class="badge bg-info ms-2">
-                  <i class="fas fa-hammer me-1"></i>In Progress
-                </span>
-              </div>
-              <div class="card-body text-center">
-                <p class="card-text mb-3">
-                  Care companionship platform matching customers with "Temanions" 
-                  for daily assistance, appointments, and activities.
-                </p>
-                <div class="mb-3">
-                  <small class="text-muted">
-                    <i class="fas fa-info-circle me-1"></i>
-                    Currently in active development - features being added weekly
-                  </small>
-                </div>
-                <a
-                  href="https://aimi-keboon.github.io/teman-malaysia/"
-                  target="_blank"
-                  class="btn btn-outline-warning"
+          <div class="card-body text-center">
+            <p class="card-text mb-3">
+              Local Produce Marketplace connecting neighbours to share
+              fresh, home-grown produce.
+            </p>
+            <div class="d-flex justify-content-center gap-2 flex-wrap">
+              <a
+                href="https://keboon.net"
+                target="_blank"
+                class="btn btn-outline-primary btn-sm"
                 >
-                  <i class="fas fa-eye me-2"></i>Preview Development
-                </a>
-              </div>
+                <i class="fas fa-external-link-alt me-2"></i>Visit keboon.net
+              </a>
+              <a
+                href="https://app.keboon.net"
+                target="_blank"
+                class="btn btn-outline-secondary btn-sm"
+                >
+                <i class="fas fa-mobile-alt me-2"></i>Visit app.keboon.net
+              </a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-              </div>
+
+      <!-- Island Horses Langkawi -->
+      <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="card h-100 shadow-sm">
+          <div class="card-header bg-success text-white text-center">
+            <img
+              src="../assets/img/customer/island-horses-logo.png"
+              alt="Island Horses Langkawi Logo"
+              class="img-fluid mb-2"
+              style="max-height: 60px"
+            />
+            <span class="badge bg-info ms-2">
+              <i class="fas fa-hammer me-1"></i>In Progress
+            </span>
+          </div>
+          <div class="card-body text-center">
+            <p class="card-text mb-3">
+              Premium equestrian center offering beach, jungle, and kampong horseback rides through Langkawi's stunning landscapes with 40 well-trained horses.
+            </p>
+            <div class="mb-3">
+              <small class="text-muted">
+                <i class="fas fa-info-circle me-1"></i>
+                Currently in active development - features being added weekly
+              </small>
             </div>
+            <a
+              href="https://aimi-keboon.github.io/island-horses/"
+              target="_blank"
+              class="btn btn-outline-success"
+            >
+              <i class="fas fa-eye me-2"></i>Preview Development
+            </a>
           </div>
         </div>
+      </div>
+
+      <!-- Teman Malaysia - Work in Progress -->
+      <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="card h-100 shadow-sm">
+          <div class="card-header bg-warning text-dark text-center">
+            <img
+              src="../assets/img/customer/teman-logo.png"
+              alt="Teman Malaysia Logo"
+              class="img-fluid mb-2"
+              style="max-height: 60px"
+            />
+            <span class="badge bg-info ms-2">
+              <i class="fas fa-hammer me-1"></i>In Progress
+            </span>
+          </div>
+          <div class="card-body text-center">
+            <p class="card-text mb-3">
+              Care companionship platform matching customers with "Temanions" 
+              for daily assistance, appointments, and activities.
+            </p>
+            <div class="mb-3">
+              <small class="text-muted">
+                <i class="fas fa-info-circle me-1"></i>
+                Currently in active development - features being added weekly
+              </small>
+            </div>
+            <a
+              href="https://aimi-keboon.github.io/teman-malaysia/"
+              target="_blank"
+              class="btn btn-outline-warning"
+            >
+              <i class="fas fa-eye me-2"></i>Preview Development
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
       </div>
     </section>
 
