--- a/services/index.html
+++ b/services/index.html
@@ -692,7 +692,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Demos</a>
+              <a class="nav-link" href="#live">Demos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#developer-profile">Team</a>
@@ -743,7 +743,7 @@
             <a class="nav-link" href="#faq" data-bs-dismiss="offcanvas">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio" data-bs-dismiss="offcanvas"
+            <a class="nav-link" href="#live" data-bs-dismiss="offcanvas"
               >Demos</a
             >
           </li>
@@ -1748,7 +1748,7 @@
 
 
     <!-- Live Portfolio Section -->
-    <section class="page-section" data-aos="fade-up">
+    <section id="live" class="page-section" data-aos="fade-up">
       <div class="container">
         <h2 class="section-heading text-center mb-5">
           <i class="fas fa-globe me-3"></i>Live Portfolio
@@ -1827,6 +1827,53 @@
           </div>
         </div>
       </div>
+      <!-- PPE5QNA - In Progress -->
+<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
+  <div class="card h-100 shadow-sm">
+    <div class="card-header bg-warning text-dark text-center">
+      <strong>PPE5QNA Portal</strong>
+      <span class="badge bg-info ms-2">
+        <i class="fas fa-hammer me-1"></i>In Progress
+      </span>
+    </div>
+    <div class="card-body text-center">
+      <p class="card-text mb-3">
+        A website for the PPE5QNA neighbourhood community in Bandar Springhill, Port Dickson—focused on local updates and connectivity.
+      </p>
+      <a
+        href="https://aimi-keboon.github.io/ppe5qna/"
+        target="_blank"
+        class="btn btn-outline-warning"
+      >
+        <i class="fas fa-eye me-2"></i>Preview Development
+      </a>
+    </div>
+  </div>
+</div>
+<!-- Nusapulse - In Progress -->
+<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
+  <div class="card h-100 shadow-sm">
+    <div class="card-header bg-warning text-dark text-center">
+      <strong>Nusapulse</strong>
+      <span class="badge bg-info ms-2">
+        <i class="fas fa-hammer me-1"></i>In Progress
+      </span>
+    </div>
+    <div class="card-body text-center">
+      <p class="card-text mb-3">
+        A comprehensive lifestyle healthcare platform offering screening, body scanning, diet & activity planning, and progress tracking for individuals with medical conditions.
+      </p>
+      <a
+        href="https://aimi-keboon.github.io/nusapulse/"
+        target="_blank"
+        class="btn btn-outline-warning"
+      >
+        <i class="fas fa-eye me-2"></i>Preview Development
+      </a>
+    </div>
+  </div>
+</div>
+
     </div>
       </div>
     </section>
