--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://keboon.net/directory">Keboon Directory</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://app.keboon.net/" target="_blank">Keboon App</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://ai.keboon.net/" target="_blank">Keboon AI</a></li>
                     
